Finish migrating repo